--- a/resepsionis/dashboard.html
+++ b/resepsionis/dashboard.html
@@ -236,7 +236,7 @@
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-cube-outline"></i>
+                                            <i class="mdi mdi-email"></i>
                                         </div>
                                         <div class="p-4">
                                             <h6 class="text-uppercase mb-3">Surat Masuk</h6>
@@ -248,7 +248,7 @@
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-buffer"></i>
+                                            <i class="mdi mdi-email-open"></i>
                                         </div>
                                         <div class="p-4">
                                             <h6 class="text-uppercase mb-3">Surat Keluar</h6>
@@ -259,7 +259,7 @@
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-book-open"></i>
+                                            <i class="mdi mdi-file-document-box"></i>
                                         </div>
                                         <div class="p-4">
                                             <h6 class="text-uppercase mb-3">Data Arsip</h6>
