--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -257,7 +257,7 @@
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-cube-outline"></i>
+                                            <i class="mdi mdi-email"></i>
                                         </div>
                                         <div class="p-4">
                                             <h6 class="text-uppercase mb-3">Surat Masuk</h6>
@@ -269,7 +269,7 @@
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-buffer"></i>
+                                            <i class="mdi mdi-email-open"></i>
                                         </div>
                                         <div class="p-4">
                                             <h6 class="text-uppercase mb-3">Surat Keluar</h6>
@@ -293,7 +293,7 @@
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-briefcase-check"></i>
+                                            <i class="mdi mdi-file-document-box"></i>
                                         </div>
                                         <div class="p-4">
                                             <h6 class="text-uppercase mb-3">Data Arsip</h6>
@@ -307,7 +307,7 @@
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-cube-outline"></i>
+                                            <i class="mdi mdi-division-box"></i>
                                         </div>
                                         <div class="p-4">
                                             <h6 class="text-uppercase mb-3">Data Divisi</h6>
@@ -319,7 +319,7 @@
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-cube-outline"></i>
+                                            <i class="mdi mdi-folder-account"></i>
                                         </div>
                                         <div class="p-4">
                                             <h6 class="text-uppercase mb-3">Data Pengguna</h6>
