--- a/divisi/surat-masuk.html
+++ b/divisi/surat-masuk.html
@@ -277,7 +277,7 @@
                                                                     <a href=#>
                                                                     <button type="button" class="btn-danger">Abaikan</button></a>
                                                                     &nbsp
-                                                                    <a href=#>
+                                                                    <a href=detail-surat-masuk.html>
                                                                     <button type="button" class="btn-warning">Detail</button></a>
                                                                 </td>
                                                                     <td>-</td>
@@ -294,7 +294,7 @@
                                                                     <a href=#>
                                                                     <button type="button" class="btn-danger">Abaikan</button></a>
                                                                     &nbsp
-                                                                    <a href=#>
+                                                                    <a href=detail-surat-masuk.html>
                                                                     <button type="button" class="btn-warning">Detail</button></a>
                                                                 </td>
                                                                    <td>Diabaikan</td>
@@ -311,7 +311,7 @@
                                                                     <a href=#>
                                                                     <button type="button" class="btn-danger">Abaikan</button></a>
                                                                     &nbsp
-                                                                    <a href=#>
+                                                                    <a href=detail-surat-masuk.html>
                                                                     <button type="button" class="btn-warning">Detail</button></a>
                                                                 </td>
                                                                     <td>Disetujui</td>
