--- a/divisi/dashboard.html
+++ b/divisi/dashboard.html
@@ -228,7 +228,7 @@
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-cube-outline"></i>
+                                            <i class="mdi mdi-email"></i>
                                         </div>
                                         <div class="p-4">
                                             <h6 class="text-uppercase mb-3">Surat Masuk</h6>
@@ -252,10 +252,10 @@
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-tag-text-outline"></i>
+                                            <i class="mdi mdi-file-document-box"></i>
                                         </div>
                                         <div class="p-4">
-                                            <h6 class="text-uppercase mb-3">Data Dokumen</h6>
+                                            <h6 class="text-uppercase mb-3">Data Arsip</h6>
                                             <h4 class="mb-0">9<small class="ml-2"></small></h4>
                                         </div>
                                     </div>
