--- a/admin/data-arsip-akte-perusahaan.html
+++ b/admin/data-arsip-akte-perusahaan.html
@@ -51,15 +51,15 @@
                         </li>
 
                         <li>
-                                <a href="dashboard.html" class="waves-effect waves-light"><i
-                                    class="mdi mdi-view-dashboard"></i><span> Dashboard </span></a>
-                            </li>
+                    <a href="dashboard.html" class="waves-effect waves-light"><i
+                        class="mdi mdi-view-dashboard"></i><span> Dashboard </span></a>
+                    </li>
 
 
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                                    class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
-                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                    <li class="has_sub">
+                        <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                            class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
+                            class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
                                 <li><a href="data-arsip.html">Data Arsip</a></li>
@@ -68,14 +68,32 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                    class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
-                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
-                            <ul class="list-unstyled">
-                                <li><a href="surat-masuk.html">Surat Masuk</a></li>
-                                <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
-                            </ul>
-                        </li>
+                                class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
+                                class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                                <ul class="list-unstyled">
+                                    <li><a href="surat-masuk.html">Surat Masuk</a></li>
+                                    <li><a href="surat-keluar.html">Surat Keluar</a></li>
+                                    <li><a href="disposisi.html">Disposisi</a></li>
+                                </ul>
+                            </li>
+
+                            <li class="has_sub">
+                            </li>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="divisi-divisi.html" class="waves-effect waves-light"><i class="mdi mdi-division-box"></i><span> Data Divisi </span></a>
+                    </li>
+
+                    <li class="has_sub">
+                    </li>
+                </a>
+            </li>
+
+            <li>
+                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
+            </li>
 
                         <li class="has_sub">
                            </li>
@@ -256,7 +274,6 @@
                                                                     <th>Nama Arsip</th>
                                                                     <th>Jenis Arsip</th>
                                                                     <th>Tanggal Upload</th>
-                                                                    <th>File pdf/jpg</th>
                                                                     <th>Aksi</th>
                                                                 </tr>
                                                             </thead>
@@ -267,7 +284,6 @@
                                                                     <td>Akte Perusahaan CV Hummasoft</td>
                                                                     <td>Akte Perusahaan</td>
                                                                     <td>14/10/2021</td>
-                                                                    <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">Akte Perusahaan.pdf</a></td>
                                                                     <td><a href=form-edit-data-akte-perusahaan.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -284,7 +300,6 @@
                                                                     <td>Akte Perusahaan CV Hummasoft</td>
                                                                     <td>Akte Perusahaan</td>
                                                                     <th>13/10/2021</th>
-                                                                    <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">Akte Perusahaan.pdf</a></td>
                                                                     <td><a href=form-edit-data-akte-perusahaan.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -301,7 +316,6 @@
                                                                     <td>Akte Perusahaan CV Hummasoft</td>
                                                                     <td>Akte Perusahaan</td>
                                                                     <th>10/10/2021</th>
-                                                                    <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">Akte Perusahaan.pdf</a></td>
                                                                     <td><a href=form-edit-data-akte-perusahaan.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
