--- a/divisi/form-add-data-akte-perusahaan.html
+++ b/divisi/form-add-data-akte-perusahaan.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Arsipin - Edit Data TDP</title>
+    <title>Arsipin - Tambah Data Akte Perusahaan</title>
     <meta content="Admin Dashboard" name="description" />
     <meta content="themesdesign" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -51,15 +51,15 @@
                         </li>
 
                         <li>
-                    <a href="dashboard.html" class="waves-effect waves-light"><i
-                        class="mdi mdi-view-dashboard"></i><span> Dashboard </span></a>
-                    </li>
+                                <a href="dashboard.html" class="waves-effect waves-light"><i
+                                    class="mdi mdi-view-dashboard"></i><span> Dashboard </span></a>
+                            </li>
 
 
-                    <li class="has_sub">
-                        <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                            class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
-                            class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                                    class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
+                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
                                 <li><a href="data-arsip.html">Data Arsip</a></li>
@@ -68,32 +68,13 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
-                                class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
-                                <ul class="list-unstyled">
-                                    <li><a href="surat-masuk.html">Surat Masuk</a></li>
-                                    <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                    <li><a href="disposisi.html">Disposisi</a></li>
-                                </ul>
-                            </li>
-
-                            <li class="has_sub">
-                            </li>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="divisi-divisi.html" class="waves-effect waves-light"><i class="mdi mdi-division-box"></i><span> Data Divisi </span></a>
-                    </li>
-
-                    <li class="has_sub">
-                    </li>
-                </a>
-            </li>
-
-            <li>
-                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
-            </li>
+                                    class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
+                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="surat-masuk.html">Surat Masuk</a></li>
+                                <!-- <li><a href="surat-keluar.html">Surat Keluar</a></li> -->
+                            </ul>
+                        </li>
 
                         <li class="has_sub">
                            </li>
@@ -250,7 +231,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="page-title-box">
-                                    <h4 class="page-title">Edit Data TDP</h4>
+                                    <h4 class="page-title">Tambah Data Akte Perusahaan</h4>
                                 </div>
                             </div>
                         </div>
@@ -259,28 +240,22 @@
                                 <div class="card m-b-30">
                                     <div class="card-body">
                                         <div class="form-group row">
-                                            <label for="example-date-input" class="col-sm-2 col-form-label">No</label>
-                                            <div class="col-sm-5">
-                                                <input class="form-control" type="text" value="1" id="example-date-input">
-                                            </div>
-                                        </div>
-                                        <div class="form-group row">
                                             <label for="example-date-input" class="col-sm-2 col-form-label">Nama Arsip</label>
                                             <div class="col-sm-5">
-                                                <input class="form-control" type="text" value="TDP CV Hummasoft" id="example-date-input">
+                                                <input class="form-control" type="text" value="" id="example-date-input">
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label for="example-date-input" class="col-sm-2 col-form-label">Jenis Arsip</label>
                                             <div class="col-sm-5">
-                                                <input class="form-control" type="text" value="TDP" id="example-date-input">
+                                                <input class="form-control" type="text" value="" id="example-date-input">
                                             </div>
                                         </div>
 
                                         <div class="form-group row">
                                             <label for="example-date-input" class="col-sm-2 col-form-label">Tanggal Upload</label>
                                             <div class="col-sm-5">
-                                                <input class="form-control" type="text" value="14/10/2021" id="example-date-input">
+                                                <input class="form-control" type="text" value="" id="example-date-input">
                                             </div>
                                         </div>
 
@@ -291,7 +266,7 @@
                                             <div class="input-group-prepend">
                                             <div class="custom-file">
                                             <input type="file" class="custom-file-input" id="inputGroupFile04">
-                                            <label class="custom-file-label" for="inputGroupFile04">TDP.pdf</label>
+                                            <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
                                         </div> 
                                         <div class="input-group-append">
                                         <button class="btn btn-primary" type="button">Upload</button>
@@ -313,15 +288,15 @@
                                                         <div class="custom">
                                                         <div class="input-group-append">
 
-                                                        <a href=data-arsip-tdp.html>
-                                                            <button class="btn btn-primary" type="button">Simpan</button></a>
+                                                        <a href=data-arsip-akte-perusahaan.html>
+                                                            <button class="btn btn-primary btn-sm" type="button">Simpan</button></a>
                                                         </div>
                                                             
                                                         </div> &nbsp &nbsp
                                                         <div class="input-group-append">
 
-                                                        <a href=data-arsip-tdp.html>
-                                                            <button class="btn btn-danger" type="button">Batal</button></a>
+                                                        <a href=data-arsip-akte-perusahaan.html>
+                                                            <button class="btn btn-danger btn-sm" type="button">Batal</button></a>
                                                         </div>
                                                     </div>
                                                     </div>
