--- a/admin/surat-masuk.html
+++ b/admin/surat-masuk.html
@@ -415,22 +415,22 @@
 <script type="text/javascript">
     $(function () {
         //Assign Click event to Button.
-        $("#tambah_disposisi").click(function () {
-            var message = "Id Name                  Country\n";
+        // $("#tambah_disposisi").click(function () {
+        //     var message = "Id Name                  Country\n";
  
-            //Loop through all checked CheckBoxes in GridView.
-            $("#Table1 input[type=checkbox]:checked").each(function () {
-                var row = $(this).closest("tr")[0];
-                message += row.cells[1].innerHTML;
-                message += "   " + row.cells[2].innerHTML;
-                message += "   " + row.cells[3].innerHTML;
-                message += "\n";
-            });
+        //     //Loop through all checked CheckBoxes in GridView.
+        //     $("#Table1 input[type=checkbox]:checked").each(function () {
+        //         var row = $(this).closest("tr")[0];
+        //         message += row.cells[1].innerHTML;
+        //         message += "   " + row.cells[2].innerHTML;
+        //         message += "   " + row.cells[3].innerHTML;
+        //         message += "\n";
+        //     });
  
-            //Display selected Row data in Alert Box.
-            alert(message);
-            return false;
-        });
+        //     //Display selected Row data in Alert Box.
+        //     alert(message);
+        //     return false;
+        // });
     });
 </script>
             </body>
